# word_mem_front_end

./: CMakeLists.txt  customwidget.cpp  customwidget.h  download_icons.ps1  functionwidget.cpp  functionwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  userdatabase.cpp  userdatabase.h  wordwidget.cpp  wordwidget.h
.cache/clangd/index/: customwidget.cpp.6C47DA72A61723DD.idx  customwidget.h.A2D01CF1B412B0CC.idx  functionwidget.cpp.7C6C0FFB1F2B4D76.idx  functionwidget.h.618A475BDA7704F0.idx  main.cpp.D82067202BED354A.idx  mainwindow.cpp.5CA80FE8836800DF.idx  mainwindow.h.E70EB779E59A032D.idx  userdatabase.cpp.AD38485C8CE4FFE2.idx  userdatabase.h.19A8B5416E984650.idx  wordwidget.cpp.21DC3D41DD900597.idx  wordwidget.h.93881A05F35FBF2F.idx
